--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-*.lsm
+.dep
+config.log
+config.status
+doc/pdmenu-1.3.2.lsm
+doc/pdmenu.man
+doc/pdmenurc.man
+examples/newbie/pdmenurc.newbie
+examples/pdmenurc
+examples/pdmenurc.complex
+examples/pdmenurc.monitor
+makeinfo
+src/slang.h
